Pascal/test/cohadar/pascal/errors/bad_operands_arithmetic4.pas
program test;
var r: real;
	
begin
	r := 3.0 mod 2; 
end.